# squeakmail

./: Cargo.toml  LICENSE  README.md
resources/: create_db.sql  mail.html
src/: database.rs  feed.rs  main.rs
