[package]
name = "squeakmail"
version = "0.1.0"
authors = ["Tom Dryer <tomdryer.com@gmail.com>"]
edition = "2018"

[dependencies]
atom_syndication = { version = "0.7", default-features = false }
attohttpc = {version = "0.11.1", features = ["charsets"]}
chrono = {version = "0.4", features = ["serde"]}
clap = { version = "2", default-features = false }
derive_more = {version = "0.99.2"}
directories = {version = "2"}
lettre = {version = "0.9", default-features = false, features = ["sendmail-transport", "serde-impls"]}
lettre_email = {version = "0.9", default-features = false}
rss = {version = "1"}
rusqlite = {version = "0.21", features = ["chrono", "bundled"]}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
tera = { version = "1", default-features = false }
toml = {version = "0.5", default-features = false}
